<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_nagao"
            android:icon="@drawable/ic_menu_bus"
            android:title="@string/menu_nagao" />
        <item
            android:id="@+id/nav_kitayama"
            android:icon="@drawable/ic_menu_bus"
            android:title="@string/menu_kitayama" />
        <item
            android:id="@+id/nav_task"
            android:title="@string/menu_tasklist"/>
    </group>
</menu>