<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="aoken.oit.timetable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nagao"
        android:name="aoken.oit.timetable.ui.nagaoBus.NagaoBusFragment"
        android:label="@string/menu_nagao"
        tools:layout="@layout/fragment_nagao_bus" />

    <fragment
        android:id="@+id/nav_kitayama"
        android:name="aoken.oit.timetable.ui.kitayamaBus.KitayamaBusFragment"
        android:label="@string/menu_kitayama"
        tools:layout="@layout/fragment_kitayama_bus" />

    <fragment
        android:id="@+id/nav_task"
        android:name="aoken.oit.timetable.ui.taskList.TaskListFragment"
        android:label="@string/menu_tasklist"
        tools:layout="@layout/fragment_task_list"/>

    <fragment
        android:id="@+id/nav_license"
        android:name="aoken.oit.timetable.ui.license.LicenseFragment"
        android:label="オープンソースライセンス"
        tools:layout="@layout/fragment_license"/>

</navigation>